--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,7 +1,20 @@
+.navbar {
+  @apply fixed top-0 bg-white/80 w-full h-20 md:h-24 p-5 flex items-center justify-between;
+}
+
+/* .links-container {
+  @apply;
+} */
+
+.responsive-links-container {
+  @apply absolute w-[95%] sm:w-[75%] text-white rounded-l-[5rem] top-0 items-center flex flex-col;
+}
+
 #cta-container {
   background-image: url("../img/bg-home.png");
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100% !important;
 }
 
 #form-contact-container {
