--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -23,6 +23,10 @@
   background-size: cover;
 }
 
+#cta-container {
+  @apply h-screen flex flex-col justify-center md:flex-row md:justify-start items-center p-0 md:px-28;
+}
+
 footer {
   @apply bg-[#652682]  flex justify-center items-center flex-col py-6;
 }
